// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTemplate hides all data if no rows have cells starting with the search value 1`] = `
<div>
  <Flex
    as="span"
    direction="row"
    elementRef={[Function]}
    inline={false}
    justifyItems="start"
    visualDebug={false}
    wrapItems={false}
  >
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={true}
      shrink={true}
    >
      <Heading
        border="none"
        color="inherit"
        ellipsis={false}
        level="h1"
        margin="medium"
      >
        Equipment
      </Heading>
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      margin="small"
      shrink={false}
    >
      <TextInput
        display="block"
        inputContainerRef={[Function]}
        inputRef={[Function]}
        interaction="enabled"
        isRequired={false}
        messages={Array []}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        renderLabel="Search"
        size="medium"
        textAlign="start"
        type="text"
        value="asdf"
      />
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      shrink={false}
    >
      <Link
        to="/equipment/create"
      >
        Add 
        Equipment
      </Link>
    </FlexItem>
  </Flex>
  <Table
    caption="Equipment"
    hover={true}
    layout="auto"
  >
    <Head>
      <Row>
        <ColHeader
          id="serialNumber"
          key="serialNumber"
          onRequestSort={[Function]}
          sortDirection="ascending"
          textAlign="start"
        >
          Serial Number
        </ColHeader>
        <ColHeader
          id="oemName"
          key="oemName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          OEM Name
        </ColHeader>
        <ColHeader
          id="modelName"
          key="modelName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          Model Name
        </ColHeader>
        <ColHeader
          id="typeName"
          key="typeName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          Type Name
        </ColHeader>
        <ColHeader
          id="Details"
          sortDirection="none"
          textAlign="start"
        />
      </Row>
    </Head>
    <Body />
  </Table>
</div>
`;

exports[`PageTemplate hides data if no cell starts with the search value 1`] = `
<div>
  <Flex
    as="span"
    direction="row"
    elementRef={[Function]}
    inline={false}
    justifyItems="start"
    visualDebug={false}
    wrapItems={false}
  >
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={true}
      shrink={true}
    >
      <Heading
        border="none"
        color="inherit"
        ellipsis={false}
        level="h1"
        margin="medium"
      >
        Equipment
      </Heading>
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      margin="small"
      shrink={false}
    >
      <TextInput
        display="block"
        inputContainerRef={[Function]}
        inputRef={[Function]}
        interaction="enabled"
        isRequired={false}
        messages={Array []}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        renderLabel="Search"
        size="medium"
        textAlign="start"
        type="text"
        value="Equipment a"
      />
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      shrink={false}
    >
      <Link
        to="/equipment/create"
      >
        Add 
        Equipment
      </Link>
    </FlexItem>
  </Flex>
  <Table
    caption="Equipment"
    hover={true}
    layout="auto"
  >
    <Head>
      <Row>
        <ColHeader
          id="serialNumber"
          key="serialNumber"
          onRequestSort={[Function]}
          sortDirection="ascending"
          textAlign="start"
        >
          Serial Number
        </ColHeader>
        <ColHeader
          id="oemName"
          key="oemName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          OEM Name
        </ColHeader>
        <ColHeader
          id="modelName"
          key="modelName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          Model Name
        </ColHeader>
        <ColHeader
          id="typeName"
          key="typeName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          Type Name
        </ColHeader>
        <ColHeader
          id="Details"
          sortDirection="none"
          textAlign="start"
        />
      </Row>
    </Head>
    <Body>
      <Row
        key="1"
      >
        <Cell
          key="serialNumber"
          textAlign="start"
        >
          Equipment a 1
        </Cell>
        <Cell
          key="oemName"
          textAlign="start"
        >
          OEM c 7
        </Cell>
        <Cell
          key="modelName"
          textAlign="start"
        >
          Model b 4
        </Cell>
        <Cell
          key="typeName"
          textAlign="start"
        >
          Type a 10
        </Cell>
        <Cell
          textAlign="start"
        >
          <Link
            to="/equipment/1"
          >
            Details
          </Link>
        </Cell>
      </Row>
    </Body>
  </Table>
</div>
`;

exports[`PageTemplate searches with case insensitivity 1`] = `
<div>
  <Flex
    as="span"
    direction="row"
    elementRef={[Function]}
    inline={false}
    justifyItems="start"
    visualDebug={false}
    wrapItems={false}
  >
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={true}
      shrink={true}
    >
      <Heading
        border="none"
        color="inherit"
        ellipsis={false}
        level="h1"
        margin="medium"
      >
        Equipment
      </Heading>
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      margin="small"
      shrink={false}
    >
      <TextInput
        display="block"
        inputContainerRef={[Function]}
        inputRef={[Function]}
        interaction="enabled"
        isRequired={false}
        messages={Array []}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        renderLabel="Search"
        size="medium"
        textAlign="start"
        type="text"
        value="TYPE A"
      />
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      shrink={false}
    >
      <Link
        to="/equipment/create"
      >
        Add 
        Equipment
      </Link>
    </FlexItem>
  </Flex>
  <Table
    caption="Equipment"
    hover={true}
    layout="auto"
  >
    <Head>
      <Row>
        <ColHeader
          id="serialNumber"
          key="serialNumber"
          onRequestSort={[Function]}
          sortDirection="ascending"
          textAlign="start"
        >
          Serial Number
        </ColHeader>
        <ColHeader
          id="oemName"
          key="oemName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          OEM Name
        </ColHeader>
        <ColHeader
          id="modelName"
          key="modelName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          Model Name
        </ColHeader>
        <ColHeader
          id="typeName"
          key="typeName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          Type Name
        </ColHeader>
        <ColHeader
          id="Details"
          sortDirection="none"
          textAlign="start"
        />
      </Row>
    </Head>
    <Body>
      <Row
        key="1"
      >
        <Cell
          key="serialNumber"
          textAlign="start"
        >
          Equipment a 1
        </Cell>
        <Cell
          key="oemName"
          textAlign="start"
        >
          OEM c 7
        </Cell>
        <Cell
          key="modelName"
          textAlign="start"
        >
          Model b 4
        </Cell>
        <Cell
          key="typeName"
          textAlign="start"
        >
          Type a 10
        </Cell>
        <Cell
          textAlign="start"
        >
          <Link
            to="/equipment/1"
          >
            Details
          </Link>
        </Cell>
      </Row>
    </Body>
  </Table>
</div>
`;

exports[`PageTemplate shows all data if search is blank 1`] = `
<div>
  <Flex
    as="span"
    direction="row"
    elementRef={[Function]}
    inline={false}
    justifyItems="start"
    visualDebug={false}
    wrapItems={false}
  >
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={true}
      shrink={true}
    >
      <Heading
        border="none"
        color="inherit"
        ellipsis={false}
        level="h1"
        margin="medium"
      >
        Equipment
      </Heading>
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      margin="small"
      shrink={false}
    >
      <TextInput
        display="block"
        inputContainerRef={[Function]}
        inputRef={[Function]}
        interaction="enabled"
        isRequired={false}
        messages={Array []}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        renderLabel="Search"
        size="medium"
        textAlign="start"
        type="text"
        value=""
      />
    </FlexItem>
    <FlexItem
      as="span"
      elementRef={[Function]}
      grow={false}
      shrink={false}
    >
      <Link
        to="/equipment/create"
      >
        Add 
        Equipment
      </Link>
    </FlexItem>
  </Flex>
  <Table
    caption="Equipment"
    hover={true}
    layout="auto"
  >
    <Head>
      <Row>
        <ColHeader
          id="serialNumber"
          key="serialNumber"
          onRequestSort={[Function]}
          sortDirection="ascending"
          textAlign="start"
        >
          Serial Number
        </ColHeader>
        <ColHeader
          id="oemName"
          key="oemName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          OEM Name
        </ColHeader>
        <ColHeader
          id="modelName"
          key="modelName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          Model Name
        </ColHeader>
        <ColHeader
          id="typeName"
          key="typeName"
          onRequestSort={[Function]}
          sortDirection="none"
          textAlign="start"
        >
          Type Name
        </ColHeader>
        <ColHeader
          id="Details"
          sortDirection="none"
          textAlign="start"
        />
      </Row>
    </Head>
    <Body>
      <Row
        key="1"
      >
        <Cell
          key="serialNumber"
          textAlign="start"
        >
          Equipment a 1
        </Cell>
        <Cell
          key="oemName"
          textAlign="start"
        >
          OEM c 7
        </Cell>
        <Cell
          key="modelName"
          textAlign="start"
        >
          Model b 4
        </Cell>
        <Cell
          key="typeName"
          textAlign="start"
        >
          Type a 10
        </Cell>
        <Cell
          textAlign="start"
        >
          <Link
            to="/equipment/1"
          >
            Details
          </Link>
        </Cell>
      </Row>
      <Row
        key="2"
      >
        <Cell
          key="serialNumber"
          textAlign="start"
        >
          Equipment b 2
        </Cell>
        <Cell
          key="oemName"
          textAlign="start"
        >
          OEM b 8
        </Cell>
        <Cell
          key="modelName"
          textAlign="start"
        >
          Model a 5
        </Cell>
        <Cell
          key="typeName"
          textAlign="start"
        >
          Type c 11
        </Cell>
        <Cell
          textAlign="start"
        >
          <Link
            to="/equipment/2"
          >
            Details
          </Link>
        </Cell>
      </Row>
      <Row
        key="3"
      >
        <Cell
          key="serialNumber"
          textAlign="start"
        >
          Equipment c 3
        </Cell>
        <Cell
          key="oemName"
          textAlign="start"
        >
          OEM a 9
        </Cell>
        <Cell
          key="modelName"
          textAlign="start"
        >
          Model c 6
        </Cell>
        <Cell
          key="typeName"
          textAlign="start"
        >
          Type b 12
        </Cell>
        <Cell
          textAlign="start"
        >
          <Link
            to="/equipment/3"
          >
            Details
          </Link>
        </Cell>
      </Row>
    </Body>
  </Table>
</div>
`;
